Nightmode header alignment fix.

--- a/style.css
+++ b/style.css
@@ -215,17 +215,17 @@
 	****************************/
 	.side {
 		opacity: 0 !important;	 /* set to 1 (instead of 0) to make sure the sidebar is always visible */ 
-		right: -200px !important; /* set to 0 (instead of -200) to make sure the sidebar is always visible */ 
+		right: -250px !important; /* set to 0 (instead of -200) to make sure the sidebar is always visible */ 
 		top: 0px !important;  
 		position: absolute !important;
-		width: 250px !important;  
+		width: 300px !important;  
 		z-index: 20;
 		-moz-transition-duration: .4s;
 		-webkit-transition-duration: .4s;
 		background-color: white !important;  
 		border-left: #0079d3 5px solid !important;
 		border-bottom: #0079d3 5px solid !important;
-		box-shadow: 40px 0px 50px 50px rgba(0,0,0, 0.6);
+		box-shadow: 0px 0px 50px 20px rgba(0,0,0, 0.4);
 		padding: 50px 30px !important;
 		margin: 0px !important;
 		margin-left: 10px !important;   
@@ -1064,7 +1064,7 @@
     }	
 	
 	.res-nightmode .side {
-   		box-shadow: 40px 0px 50px 50px rgba(125,125,125, 0.2) !important;;
+   		box-shadow: 0px 0px 50px 20px rgba(255,255,255, 0.04) !important;;
    		border-left: #369 3px solid !important;
   		border-bottom: #369 3px solid !important;
 	}
@@ -1074,7 +1074,7 @@
 	}
 	
 	/* HEADER */
-	.res-nightmode #header, .res-nightmode #header #header-bottom-right, .res-nightmode #header #header-bottom-left{
+	body.res-nightmode #header, .res-nightmode #header #header-bottom-right, .res-nightmode #header #header-bottom-left{
 	     background-color: #222 !important;
 	}
 	
@@ -2356,7 +2356,4 @@
 	    margin-right: 10px !important;
 	    color: #aaa !important;
 	}
-
-	
-
 }
